--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ org.gradle.daemon=false
 org.gradle.jvmargs=-Xms512M -Xmx1G -Dfile.encoding=UTF-8 -Dconsole.encoding=UTF-8
 org.gradle.configureondemand=false
 gameJoltApiVersion=0.0.5
+regExodusVersion=0.1.16
 stripeVersion=2.0.0
 tenPatchVersion=5.2.3
 graalHelperVersion=2.0.1
