--- a/html/build.gradle
+++ b/html/build.gradle
@@ -36,6 +36,7 @@ dependencies {
   implementation "com.github.raeleus:game-jolt-api:$gameJoltApiVersion:sources"
   implementation "com.github.tommyettinger:gdx-backend-gwt:1.1210.1"
   implementation "com.github.tommyettinger:gdx-backend-gwt:1.1210.1:sources"
+  implementation "com.github.tommyettinger:regexodus:$regExodusVersion:sources"
   implementation "com.google.jsinterop:jsinterop-annotations:2.0.2:sources"
   implementation project(':core')
 
